--- a/config/locales/active_admin.en.yml
+++ b/config/locales/active_admin.en.yml
@@ -1,5 +1,12 @@
 en:
   active_admin:
+    dashboard: Home
+
+    # grep -r "buttons" * | grep "app/admin"
+    buttons:
+      user:
+        reset_password: Reset password
+
     # grep -r "batch_action" * | grep "app/admin"
     batch_actions:
       labels:
