Added ability to admin to overtake user's identity

--- a/config/locales/active_admin.en.yml
+++ b/config/locales/active_admin.en.yml
@@ -6,6 +6,7 @@ en:
     buttons:
       user:
         reset_password: Reset password
+        become: Overtake identity
 
     # grep -r "batch_action" * | grep "app/admin"
     batch_actions:
