--- a/config/locales/formtastic.en.yml
+++ b/config/locales/formtastic.en.yml
@@ -9,15 +9,19 @@ en:
       details: Details
       user_details: "User details"
       user_password: "User password"
-      
+
     labels:
       autocomplete: Autocomplete
-          
+
     placeholders:
       user:
         email: john.doe@example.com
         name: John Doe
-        
+
+    hints:
+      user:
+        time_zone: "Where are you located?"
+
     actions:
       create: Create # "Create %{model}"
       update: Update # "Update %{model}"
