--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -16,6 +16,9 @@ en:
       timeout: "Your session expired. Please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
       unconfirmed: "You have to confirm your email address before continuing."
+      user:
+        not_found_in_database: "User not found. Are you using correct email address?"
+        deleted: "Your account was deleted. If you think this is an error please contact administrator."
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
